Closed Bug 281455 Opened 21 years ago Closed 21 years ago

top left of page foreground disappears when page is scrolled to bottom and "website description" textarea or any input field in form is selected

Categories

(Core Graveyard :: GFX: Mac, defect)

PowerPC
macOS
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: mozbugs, Assigned: sfraser_bugs)

References

()

Details

Attachments

(3 files)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7.5) Gecko/20041107 Firefox/1.0 Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7.5) Gecko/20041107 Firefox/1.0 In the page on http://bigislandmarketplace.com/suggest-newsstand-link , a portion of top left of the page's foreground disappears when you scroll to the bottom of the page and focus the cursor (by clicking inside the form field) on the "website description" textarea or another text input field. Only the background image remains. Note that the disappearing area is the same size as the please note box on the right (ID #notebox) Reproducible: Always Steps to Reproduce: 1. Open Firefox or Mozilla in Mac OS X (I'm using 10.3.7) 2. Go to http://bigislandmarketplace.com/suggest-newsstand-link 3. Scroll all the way to bottom of page 4. Click inside a visible form input field or textarea in the center of the page Actual Results: An area on the top left corner of the page equal to the width of the #notebox item on the right disappeared. It's like a hole on the page's foreground. Only the background image shows. Expected Results: The software should not have modified the top left portion of the page.
wfm. Mozilla/5.0 (Windows; U; Windows NT 5.1; ja-JP; rv:1.8b) Gecko/20050207 Firefox/1.0+
This bug is for the Mac versions of Mozilla and Firefox only! Windows version of Firefox does NOT show this bug.
Is this a problem in a current trunk build? Or just with 1.7 branch builds?
I see it in trunk.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Bug does not appear when background image for body tag is removed in stylesheet.
This seems to be a problem with the absolutely positioned "notebox" div, which refreshes incorrectly when you resize the window, and is causing the blank area in the top-left. I don't see this in Camino, which suggests a Mac widget bug.
Attached file Simple testcase
Blocks: 278812
Simon, would bug 268252 comment 20 have any bearing here?
I think what's happenning here is that the mac code that draws the tiled image over the background of the abs-positioned widget is drawing at the wrong coords. I haven't figured out the codepath for that yet.
Camino 2005022019 (v0.8+): WFM. Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; ja-JP; rv:1.8b2) Gecko/20050220 Firefox/1.0+ : It reproduces. Mac OS X 10.3.8
Assignee: roc → joshmoz
Component: Layout: View Rendering → Widget: Mac
QA Contact: ian → mac
Assignee: joshmoz → sfraser_bugs
Component: Widget: Mac → GFX: Mac
Attached patch PatchSplinter Review
This bug was caused by the RC made for the caret resetting the port origin before we hit the image tiling code. It affected image tiling because the codepath previously did not go through nsRenderingContextMac. The fix is to override the image drawing methods in nsRenderingContextMac, and in those overrides just setup the port state, then call the base class.
Attachment #189741 - Flags: superreview?(jhpedemonte)
Attachment #189741 - Flags: review?(mark)
Patch also contains warning fixes, and a fix for a flub in nsGfxUtils.h.
Comment on attachment 189741 [details] [diff] [review] Patch I -completely- agree with the spirit of this patch, but I'll note that I wasn't able to reproduce in my own build. I do see the problem in the nightly, so I'm probably just experiencing side-effects of my own musings with port state. Oh, and thanks for the warning cleanup!
Attachment #189741 - Flags: review?(mark) → review+
Attachment #189741 - Flags: superreview?(jhpedemonte) → review+
Attachment #189741 - Flags: approval1.8b4?
Attachment #189741 - Flags: approval1.8b4? → approval1.8b4+
Checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: