Fix bug 281455: bits of background image of abs-positioned div draw in the wrong place. Fixed by ensuring that nsRenderingContextMac fixes up the port origin before calling the image tiling code (since the caret draw may have nuked the origin). r=mark, sr=jhpedemonte, a=bsmedberg